--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gadget || Gadget Heaven</title>
+  <!-- Google font sora cdn -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="font-sora">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
